# nococlient

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  dodo.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt
examples/: nococlient_demo.py
nococlient/: __init__.py  client.py  config.py
src/: __init__.py  nococlient.py
src/nococlient/: nococlient.py
tests/: .env  conftest.py  docker-compose.yml  test_client.py  test_config.py
